<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="22dp"
    tools:context=".StartUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:fontFamily="@font/fira_code_medium"
            android:gravity="center"
            android:text="@string/who_are_you"
            android:textColor="@color/md_theme_dark_tertiary"
            android:textSize="35sp"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Student"
            android:layout_width="220dp"
            android:layout_height="67dp"
            android:layout_margin="12dp"
            android:fontFamily="@font/fira_code_medium"
            android:text="@string/student"
            android:textColor="@color/md_theme_light_onTertiary"
            android:textSize="22sp"
            android:textStyle="normal"
            app:cornerRadius="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Teacher"
            android:layout_width="220dp"
            android:layout_height="67dp"
            android:layout_margin="12dp"
            android:fontFamily="@font/fira_code_medium"
            android:text="@string/teacher"
            android:textColor="@color/md_theme_light_onTertiary"
            android:textSize="22sp"
            android:textStyle="normal"
            app:cornerRadius="8dp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="190dp"
            android:text="@string/made_with_india"
            android:textSize="19sp"/>
    </LinearLayout>
</ScrollView>