<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:overScrollMode="never"
    android:clipToPadding="false"
    android:padding="22dp"
    tools:context=".Activity.SignIn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_here"
            android:textColor="@color/md_theme_light_primary"
            android:gravity="center"
            android:textSize="32sp"
            android:layout_margin="12dp"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/email_or_phone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EmailOrPhone"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:textStyle="normal"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:inputType="text"
                android:textColor="@color/md_theme_light_scrim"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:inputType="textPassword"
                android:textStyle="normal"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@color/md_theme_light_scrim"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/SignIn"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textStyle="normal"
            android:layout_margin="12dp"
            android:textSize="19sp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/CreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_an_account"
            android:textSize="17sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/md_theme_dark_outline"/>

    </LinearLayout>

</ScrollView>