<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:overScrollMode="never"
    android:clipToPadding="false"
    android:padding="22dp"
    tools:context=".ExportData">

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/export_data"
            android:textSize="22sp"
            android:layout_margin="10dp"
            android:textColor="@color/md_theme_light_primary"
            android:textStyle="bold"
            android:gravity="center" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/FirstName"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:text=""
            android:hint="@string/first_name"
            android:textSize="19sp"
            android:gravity="center"
            android:layout_margin="12dp"
            android:background="@drawable/cust_button"
            android:textColor="@color/md_theme_light_primary"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/LastName"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:text=""
            android:hint="@string/last_name"
            android:textSize="19sp"
            android:gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/cust_button"
            android:textColor="@color/md_theme_light_primary"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:text=""
            android:hint="@string/email"
            android:textSize="19sp"
            android:gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/cust_button"
            android:textColor="@color/md_theme_light_primary"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/BirthDate"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:text=""
            android:hint="@string/birth_date"
            android:textSize="19sp"
            android:gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/cust_button"
            android:textColor="@color/md_theme_light_primary"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/PhoneNo"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:text=""
            android:hint="@string/phone_no"
            android:textSize="19sp"
            android:gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/cust_button"
            android:textColor="@color/md_theme_light_primary"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/Tid"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:hint="@string/not_applicable"
            android:textSize="19sp"
            android:gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/cust_button"
            android:textColor="@color/md_theme_light_primary"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/Rno"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:hint="@string/not_applicable"
            android:textSize="19sp"
            android:gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/cust_button"
            android:textColor="@color/md_theme_light_primary"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/Division"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:hint="@string/not_applicable"
            android:textSize="19sp"
            android:gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/cust_button"
            android:textColor="@color/md_theme_light_primary"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/Sid"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:hint="@string/not_applicable"
            android:textSize="19sp"
            android:gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/cust_button"
            android:textColor="@color/md_theme_light_primary"/>

    </LinearLayout>
</ScrollView>