<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:clipToPadding="false"
    android:padding="22dp"
    android:layout_height="match_parent"
    tools:context=".Teachers.SignUpTeachers">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_here"
            android:textColor="@color/md_theme_light_primary"
            android:gravity="center"
            android:textSize="32sp"
            android:layout_margin="20dp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/first_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:inputType="textPersonName"
                    android:textStyle="normal"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:textColor="@color/md_theme_light_scrim"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/first_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:inputType="textPersonName"
                    android:textStyle="normal"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:textColor="@color/md_theme_light_scrim"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:inputType="textEmailAddress"
                android:textStyle="normal"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@color/md_theme_light_scrim"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/birth_date"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/BirthDate"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:inputType="none"
                    android:maxLength="12"
                    android:textStyle="normal"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:textColor="@color/md_theme_light_scrim"/>

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/BirthDateCalendar"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:src="@drawable/src_calendar32"
                app:tint="@color/md_theme_light_primary" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/phone_no"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:inputType="number"
                android:maxLength="12"
                android:textStyle="normal"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@color/md_theme_light_scrim"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/teachers_id"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:inputType="number"
                android:maxLength="12"
                android:textStyle="normal"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@color/md_theme_light_scrim"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textStyle="normal"
            android:layout_margin="12dp"
            android:textSize="19sp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/AlreadyAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textSize="17sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/md_theme_dark_outline"/>

    </LinearLayout>
</ScrollView>